# fty-common-socket

./: .dependencies-graph.dot.part  .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  LICENSE  Makefile.am  ci_dependencies.sh  configure.ac  license.xml  project.xml
builds/check_zproject/: ci_build.sh
doc/: asciidoc.conf
include/: fty_common_socket.h  fty_common_socket_basic_mailbox_server.h  fty_common_socket_library.h  fty_common_socket_sync_client.h
packaging/debian/: changelog  control  copyright  fty-common-socket.dsc.obs  libfty-common-socket-dev.install  libfty-common-socket1.install
packaging/redhat/: fty-common-socket.spec
src/: fty_common_socket_basic_mailbox_server.cc  fty_common_socket_classes.h  fty_common_socket_helpers.cc  fty_common_socket_helpers.h  fty_common_socket_private_selftest.cc  fty_common_socket_selftest.cc  fty_common_socket_sync_client.cc
test/: fty_common_socket_basic_mailbox_server.cc  fty_common_socket_sync_client.cc
